# coffe-beans-skills

./: .env.example  .gitignore  .teller  BACKEND_DEPLOYMENT_QUICKSTART.md  CLAUDE.md  DAILY_SUMMARY_2025-10-23.md  FIREBASE_DEPLOYMENT_SUMMARY.md  FIREBASE_SKILL_IMPROVEMENTS.md  FIREBASE_SKILL_QUICKSTART.md  GET_STRIPE_KEY.md  GITHUB_SECRETS_CLI_GUIDE.md  GOOGLE_MAPS_SETUP.md  PRD-CHECKLIST.md  PRD-EXECUTION.md  PRD-REBUILD.md  PRD-ROADMAP.md  PRD.md  PROJECT-STATUS.md  README.md  SECURITY_AUDIT.md  STRIPE_INTEGRATION_SUMMARY.md  VISUAL-IMPROVEMENTS-DEFERRED.md  check_console_detailed.py  create_bright_logo.py  create_golden_logo.py  diagnose_copilot.py  grant-cloud-run-permissions.sh  md.md  package-lock.json  package.json  test_back_button.py  test_back_force_click.py  test_back_navigation.py  test_blog_debug.py  test_blog_recipes.py  test_blog_simple.py  test_cart_checkout.py  test_click_with_console.py  test_copilot.py  test_copilot_chat.py  (+10 more)
.claude/: SKILL_UPDATE_GUIDE.md
apps/content-gen/backend/: pyproject.toml  test_phase1.py
apps/content-gen/backend/src/content_gen_backend/: config.py  database.py  main.py
apps/content-gen/backend/src/content_gen_backend/models/: idea.py  news.py  publishing.py  video_response.py
apps/content-gen/backend/src/content_gen_backend/routers/: ideas.py  news.py  publishing.py  videos.py
apps/content-gen/backend/src/content_gen_backend/services/: abstract_video_service.py  idea_service.py  kie_veo_service.py  kie_wan_service.py  metadata_service.py  model_router_service.py  news_service.py  video_formatter.py  youtube_service.py
(+435 files in other folders)
