[project]
name = "content-gen-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.2",
    "uvicorn[standard]>=0.37.0",
    "openai>=1.54.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.0",
    "requests>=2.32.5",
    "anthropic>=0.70.0",
    "python-dotenv>=1.1.1",
    "google-cloud-aiplatform>=1.121.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.155.0",
    "pillow>=11.1.0",
    "httpx>=0.28.1",
]

[tool.uv]
package = true

[project.scripts]
dev = "content_gen_backend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_gen_backend"]
